--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "airtable": "^0.11.1",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
