--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "airtable": "^0.11.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-router-dom": "5.3.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
