--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "airtable": "^0.11.1",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "@popperjs/core": "2.10.2",
+    "airtable": "0.11.1",
+    "axios": "0.24.0",
+    "bootstrap": "5.1.3",
+    "chart.js": "^3.5.0",
+    "react": "17.0.2",
+    "react-chartjs-2": "^3.3.0",
+    "react-charts": "2.1.0",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
